--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
      </div>
      
      <div class="navbar">
-       <a href="#">Home</a>
+       <a href="index.html">Home</a>
        <a href="#">Fun Facts</a>
        <a href="#">Articles</a>
        <a href="#">Quotes</a>
-       <a href="#" class="right">Contact</a>
+       <a href="contact.html" class="right">Contact</a>
      </div>
      
      <div class="row">
